# AI_Instruction_Kits

./: .gitignore  INSTRUCTION_SELECTOR.md  INSTRUCTION_SELECTOR_en.md  LICENSE  LICENSE-NOTICE.md  LICENSE-NOTICE_en.md  README.md  README_en.md  ROOT_INSTRUCTION.md  ROOT_INSTRUCTION_en.md  USAGE_GUIDE.md  cleanup_issue.md  issue_checkpoint_summary.md  issue_checkpoint_system_instruction_overuse.md  naming_fix_log.txt  naming_fix_safe_log.txt  pyproject.toml  requirements.txt  test_business_consultant_after2.md  test_data_analyst_after.md  test_modular_integration.md
.claude/: settings.json  skills
dev-docs/: DEVELOPMENT_PLAN_SEARCH.md
docs/: INSTALL.md  INSTALLER_ARCHITECTURE.md  QUICKSTART.md  _config.yml  checkpoint-implementation-spec.md  claude-code-agents.md  claude-custom-commands.md  codex-custom-commands.md  features.md  gh-cli-setup.md  index.md  issue_48_final_update.md  openhands-oss-guide.md  quickstart.md  usage.md
downstream/: README.md
instructions/: PROJECT_META.md  PROJECT_META.yaml
issues/: web_installer_proposal.md  worktree-management-short.md  worktree-management.md
modular/: DEVELOPMENT.md  DEVELOPMENT_en.md  README.md  README_en.md  catalog.yaml  catalog_cache.json  composer.py
proposals/: checkpoint-concurrent-execution.md  checkpoint-status-behavior.md  checkpoint-subcommand-design.md  claude-command-update-approaches.md  instruction-usage-tracking.md
reports/: .gitignore  README.md  claude_code_subagent_investigation.md  subagent_issue_summary.md
scripts/: agent_tasks.py  check_module_sizes.py  checkpoint.sh  commit.sh  (+24 more)
(+701 files in other folders)
