[project]
name = "ai-instruction-kits"
version = "0.1.0"
description = "AI指示書を構造的に管理・提供するシステム"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "dobachi", email = "" }
]

dependencies = [
    "pyyaml>=6.0.2",
    "click>=8.0.0",
    "python-frontmatter>=1.0.0",
    "openhands-ai>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ai-instruction = "scripts.select_instruction:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/instructions",
    "/modular",
    "/scripts",
    "/templates",
    "/README.md",
    "/README_en.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]